--- a/templates/Login.html
+++ b/templates/Login.html
@@ -21,7 +21,7 @@
                             <input type="submit" value="Login" class="btn btn-success btn-block">
                         </div>
                     </article>
-                    <div class="border-top card-body text-center">Not yet a user? <a href="{{ url_for('Register') }}">Register</a></div>
+                    <div class="card-footer text-center"><a href="{{ url_for('Register') }}">Not yet a user?</a></div>
                 </div>
             </div>
         </div>
