--- a/templates/Register.html
+++ b/templates/Register.html
@@ -105,7 +105,7 @@
                             <input type="submit" value="Register" class="btn btn-success btn-block">
                         </div>
                     </article>
-                    <div class="border-top card-body text-center">Have an account? <a href="{{ url_for('Login') }}">Log In</a></div>
+                    <div class="card-footer text-center"><a href="{{ url_for('Login') }}">Have an account?</a></div>
                 </div>
             </div>
         </div>
