--- a/templates/Login.html
+++ b/templates/Login.html
@@ -10,17 +10,19 @@
                     <header class="card-header">
                         <h4 class="card-title mt-2">User Login</h4>
                     </header>
-                    <article class="card-body">
-                        <h6 class="card-text">Email:</h6>
-                        <input type="text" class="form-control" placeholder="Enter Email Address" aria-label="email">
-                        &nbsp;
-                        <h6 class="card-text">Password:</h6>
-                        <input type="password" class="form-control" placeholder="Enter Password" aria-label="password">
-                        &nbsp;
-                        <div class="d-grid gap-2">
-                            <input type="submit" value="Login" class="btn btn-success btn-block">
-                        </div>
-                    </article>
+                    <form action="/Login" method="post">
+                        <article class="card-body">
+                            <h6 class="card-text">Email:</h6>
+                            <input type="text" name="email" class="form-control" placeholder="Enter Email Address" aria-label="email">
+                            &nbsp;
+                            <h6 class="card-text">Password:</h6>
+                            <input type="password" name="password" class="form-control" placeholder="Enter Password" aria-label="password">
+                            &nbsp;
+                            <div class="d-grid gap-2">
+                                <input type="submit" value="Login" class="btn btn-success btn-block">
+                            </div>
+                        </article>
+                    </form>
                     <div class="card-footer text-center"><a href="{{ url_for('Register') }}">Not yet a user?</a></div>
                 </div>
             </div>
