--- a/vaccine/templates/base.html
+++ b/vaccine/templates/base.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    
+ 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
@@ -30,34 +32,62 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
-
+         
       <!-- Navbar links -->
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('Home') }}">Home</a>
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="{{ url_for('Home') }}">Home</a>  
           </li>
-          <li class="nav-item">
+        </ul>
+        {%if current_user.is_authenticated %}
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
             <a class="nav-link" href="{{ url_for('ScheduleAppointment') }}">Schedule Appointment</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="{{ url_for('ViewAppointment') }}">View Appointment</a>
           </li>
-              </ul>
+        </ul>
+        <ul class="navbar-nav ms-auto">
+            
+              <li class="nav-item active">
+                  <a class="nav-link">Welcome, {{ current_user.email_address }}</a>
+              </li>
+              <li class="nav-item active">
+                  <a class="nav-link" href="{{ url_for('logout_page') }}">Logout</a>
+              </li>
+          </ul>>
+        {%else%}
           <ul class="navbar-nav ms-auto">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Account</a>
-                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="{{ url_for('Login') }}">Login</a></li>
-                            <li><a class="dropdown-item" href="{{ url_for('Register') }}">Register</a></li>
-                        </ul>
-                    </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Account</a>
+                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="{{ url_for('login') }}">Login</a></li>
+                    <li><a class="dropdown-item" href="{{ url_for('register') }}">Register</a></li>
                 </ul>
             </li>
-        </ul>
+          </ul>
+        
+        {%endif%}
       </div>
     </nav>
+    {%with messages = get_flashed_messages(with_categories=true)%}
+      {% if messages %}
+        {%for category,message in messages%}
+        <div class="alert alert-{{ category }}">
+          
+          <button type="button" class="btn-close " data-dismiss="alert" aria-label="Close">
+          </button>
+          {{ message }}
+      </div>
+        {%endfor%}
+      {% endif %}
+    {%endwith%}
         {% block content %}
         {% endblock %}
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    
 </body>
 </html>
