restructured and organized the code

--- a/templates/register.html
+++ b/templates/register.html
@@ -87,7 +87,7 @@ Register Page
                             {{ form.submit(class="btn btn-lg btn-block btn-primary") }}
                         </div>
                     </article>
-                    <div class="border-top card-body text-center">Have an account? <a href="{{ url_for('login') }}">Log In</a></div>
+                    <div class="border-top card-body text-center">Have an account? <a href="{{ url_for('Login') }}">Log In</a></div>
                 </div>
             </div>
         </div>
