--- a/templates/base.html
+++ b/templates/base.html
@@ -63,8 +63,8 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Account</a>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="{{ url_for('login') }}">Login</a></li>
-                    <li><a class="dropdown-item" href="{{ url_for('register') }}">Register</a></li>
+                    <li><a class="dropdown-item" href="{{ url_for('Login') }}">Login</a></li>
+                    <li><a class="dropdown-item" href="{{ url_for('Register') }}">Register</a></li>
                 </ul>
             </li>
           </ul>
