--- a/templates/login.html
+++ b/templates/login.html
@@ -25,7 +25,7 @@
                     </article>
                     
         
-                    <div class="border-top card-body text-center">Not yet a user? <a href="{{ url_for('register') }}">Register</a></div>
+                    <div class="border-top card-body text-center">Not yet a user? <a href="{{ url_for('Register') }}">Register</a></div>
                 </div>
             </div>
         </div>
