--- a/templates/base_admin.html
+++ b/templates/base_admin.html
@@ -30,7 +30,7 @@
               <a class="nav-link">Welcome, {{ current_user.hosp_name }}</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('logout_page') }}">Logout</a>
+              <a class="nav-link" href="{{ url_for('Logout') }}">Logout</a>
           </li>
       </ul>
         {% else %}
