(register) city form-control to form-select

--- a/templates/register.html
+++ b/templates/register.html
@@ -35,7 +35,7 @@ Register Page
                                 <h6 class="card-text">City:</h6>
                                 <div class="row">
                                   <div class="col">
-                                    {{ form.city(class="form-control", placeholder="City") }}
+                                    {{ form.city(class="form-select", placeholder="City") }}
                                   </div>
                                   <div class="col">
                                   </div>
