--- a/templates/ScheduleAppointment.html
+++ b/templates/ScheduleAppointment.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
 {% extends "base.html" %}
 {% block title %}Schedule Appointment{% endblock %}
 {% block content %}
@@ -12,6 +13,7 @@
                     <h4 class="card-title mt-2">Hospital Locations</h4>
                 </header>
                 <article class="card-body">
+                    <iframe class="map", src="/map" width="920" height="620"></iframe>
                 </article>
             </div>
           </div>
