--- a/templates/base_admin.html
+++ b/templates/base_admin.html
@@ -21,7 +21,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="{{url_for('index')}}">Update <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{{url_for('vaccines')}}">Update <span class="sr-only">(current)</span></a>
             </li>
         </ul>
         {% if current_user.is_authenticated %}
