--- a/templates/ScheduleAppointment.html
+++ b/templates/ScheduleAppointment.html
@@ -13,7 +13,7 @@
                     <h4 class="card-title mt-2">Hospital Locations</h4>
                 </header>
                 <article class="card-body">
-                    <iframe class="map", src="/map" width="720" height="620"></iframe>
+                    <iframe class="map", src="{{url_for('static', filename='map.html')}}" width="720" height="620"></iframe>
                 </article>
             </div>
           </div>
