--- a/templates/base_admin.html
+++ b/templates/base_admin.html
@@ -36,10 +36,10 @@
         {% else %}
         <ul class="navbar-nav">
           <li class="nav-item">
-              <a class="nav-link" href="{{url_for('login')}}">Login</a>
+              <a class="nav-link" href="{{url_for('adminlogin')}}">Login</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="{{url_for('register')}}">Register</a>
+              <a class="nav-link" href="{{url_for('Register')}}">Register</a>
           </li>
       </ul>
         {% endif %}
