adjust design on schedule appointment

--- a/templates/ScheduleAppointment.html
+++ b/templates/ScheduleAppointment.html
@@ -18,7 +18,18 @@
             </div>
           </div>
           <div class="col-sm-6">
+
             <div class="card">
+              <header class="card-header">
+                <h4 class="card-title mt-2">Hospital Locations</h4>
+              </header>
+
+              <article class="card-body">
+                <h4 class="card-title mt-2">Suggested Location: {insert suggested location}</h4>
+              </article>
+            </div>
+
+            <div class="card my-3 py-2">
                 <header class="card-header">
                     <h4 class="card-title mt-2">Hospital Information</h4>
                 </header>
@@ -109,10 +120,10 @@
                         </div>
                       </div>
                     </div>
+                  </div>
+                </article>
             </div>
           </div>
-                </article>
-        </div>
-          </div>
+    </div>
     </div>
 {% endblock %}
