--- a/templates/ScheduleAppointment.html
+++ b/templates/ScheduleAppointment.html
@@ -25,7 +25,7 @@
               </header>
 
               <article class="card-body">
-                <h4 class="card-title mt-2">Suggested Location: {insert suggested location}</h4>
+                <h4 class="card-title mt-2">Suggested Location: {{lowestdistance}} </h4>
               </article>
             </div>
 
