--- a/templates/ViewAppointment.html
+++ b/templates/ViewAppointment.html
@@ -12,31 +12,30 @@
                             <div class="row">
                                   <div class="col">
                                     <h6 class="card-text">First Name:</h6>
-                                     <input type="text" class="form-control" placeholder="First Name" aria-label="fname" readonly value ={{current_user.first_name}}></li>
+                                     <input type="text" class="form-control" placeholder="First Name" aria-label="fname" readonly value ={{view.first_name}}></li>
                                   </div>
                                   <div class="col">
                                     <h6 class="card-text">Middle Name:</h6>
-                                     <input type="text" class="form-control" placeholder="Middle Name" aria-label="mname" readonly value ={{current_user.middle_name}}></li>
+                                     <input type="text" class="form-control" placeholder="Middle Name" aria-label="mname" readonly value ={{view.middle_name}}></li>
                                   </div>
                                 <div class="col">
                                     <h6 class="card-text">Last Name:</h6>
-                                     <input type="text" class="form-control" placeholder="Last Name" aria-label="lname" readonly value ={{current_user.last_name}}></li>
+                                     <input type="text" class="form-control" placeholder="Last Name" aria-label="lname" readonly value ={{view.last_name}}></li>
                                   </div>
                             </div>
                         </div>
-                         &nbsp;
+                         <br>
                          <h6 class="card-text">Registration Number:</h6>
-                         <input type="text" class="form-control" placeholder="Registration Number" aria-label="registrationnumber" readonly value ={{current_user.user_id}}></li>
-                        &nbsp;
+                         <input type="text" class="form-control" placeholder="Registration Number" aria-label="registrationnumber" readonly value ={{view.id}}></li>
+                         <br>
                          <h6 class="card-text">Vaccine Name:</h6>
-                            <input type="text" class="form-control" placeholder="Vaccine Name" aria-label="vaccinename" readonly></li>
-                        &nbsp;
+                            <input type="text" class="form-control" placeholder="Vaccine Name" aria-label="vaccinename" readonly value={{view.vaccine_name}}></li>
+                        <br>
                          <h6 class="card-text">Vaccination Site:</h6>
-                             <input type="text" class="form-control" placeholder="Vaccination Site" aria-label="cvaccinesite" readonly></li>
-                         &nbsp;
+                             <input type="text" class="form-control" placeholder="Vaccination Site" aria-label="cvaccinesite" readonly value={{view.hosp_name}}></li>
+                          <br>
                          <h6 class="card-text">Vaccination Schedule:</h6>
-                             <input type="text" class="form-control" placeholder="Vaccination Date" aria-label="vaccinesched" readonly></li>
-
+                             <input type="text" class="form-control" placeholder="Vaccination Date" aria-label="vaccinesched" readonly value={{view.availability_date}}></li>
                     </article>
                 </div>
             </div>
