--- a/templates/Home.html
+++ b/templates/Home.html
@@ -11,7 +11,7 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="{{url_for('static', filename='register-vaccine-pic.jpg')}}" class="d-block w-100" alt="First Slide">
+      <img src="{{ register_vaccine }}" class="d-block w-100" alt="First Slide">
       <div class="carousel-caption d-none d-md-block">
         <h2>Be One of Us and Be Part of the New World</h2>
         <p>Get your appointment now</p>
@@ -19,12 +19,12 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="{{url_for('static', filename='what-are-covid-vaccines.png')}}" class="d-block w-100" alt="Second Slide">
+      <img src="{{ what_are_covid_vaccines }}" class="d-block w-100" alt="Second Slide">
       <div class="carousel-caption d-none d-md-block">
       </div>
     </div>
      <div class="carousel-item">
-      <img src="{{url_for('static', filename='get-vaccinated.png')}}" class="d-block w-100" alt="Third Slide">
+      <img src="{{ get_vaccinated }}" class="d-block w-100" alt="Third Slide">
       <div class="carousel-caption d-none d-md-block">
       </div>
     </div>
@@ -51,21 +51,21 @@
     <!-- First Three columns of text below the carousel -->
     <div class="row">
       <div class="col-lg-4">
-        <img src="{{url_for('static', filename='vaccine.jpg')}}" width="240" height="240" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 240x240" preserveAspectRatio="xMidYMid slice" focusable="false" align="center">
+        <img src="{{ vaccine_pic }}" width="240" height="240" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 240x240" preserveAspectRatio="xMidYMid slice" focusable="false" align="center">
         <h2>Pfizer BioNTech</h2>
         <p><h6>Dose and Frequency:</h6> 2 doses and 21 days apart</p>
         <p><h6>Vaccine Efficacy:</h6> 95% against symptomatic COVID-19</p>
 
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <img src="{{url_for('static', filename='vaccine.jpg')}}" width="240" height="240" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 240x240" preserveAspectRatio="xMidYMid slice" focusable="false" align="center">
+        <img src="{{ vaccine_pic }}" width="240" height="240" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 240x240" preserveAspectRatio="xMidYMid slice" focusable="false" align="center">
         <h2>Oxford AstraZeneca</h2>
         <p><h6>Dose and Frequency:</h6> 2 doses and 4-12 weeks apart</p>
         <p><h6>Vaccine Efficacy:</h6> 70.4% against symptomatic COVID-19; 100% against severe COVID-19</p>
       </div><!-- /.col-lg-4 -->
 
       <div class="col-lg-4">
-        <img src="{{url_for('static', filename='vaccine.jpg')}}" width="240" height="240" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 240x240" preserveAspectRatio="xMidYMid slice" focusable="false" align="center">
+        <img src="{{ vaccine_pic }}" width="240" height="240" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 240x240" preserveAspectRatio="xMidYMid slice" focusable="false" align="center">
         <h2>Sinovac CoronaVac</h2>
         <p><h6>Dose and Frequency:</h6> 2 doses and 28 days apart</p>
         <p><h6>Vaccine Efficacy:</h6> 65-91% (based on Brazil, Indonesia, and Turkey Trials)</p>
@@ -75,21 +75,21 @@
   <!-- Second Three columns of text below the carousel -->
     <div class="row">
       <div class="col-lg-4">
-        <img src="{{url_for('static', filename='vaccine.jpg')}}" width="240" height="240" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 240x240" preserveAspectRatio="xMidYMid slice" focusable="false" align="center">
+        <img src="{{ vaccine_pic }}" width="240" height="240" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 240x240" preserveAspectRatio="xMidYMid slice" focusable="false" align="center">
         <h2>Gamaleya Sputnik V</h2>
         <p><h6>Dose and Frequency:</h6> 2 doses and 21 days apart</p>
         <p><h6>Vaccine Efficacy:</h6> 91.6% against symptomatic COVID-19; 100% against moderate or severe cases </p>
 
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <img src="{{url_for('static', filename='vaccine.jpg')}}" width="240" height="240" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 240x240" preserveAspectRatio="xMidYMid slice" focusable="false" align="center">
+        <img src="{{ vaccine_pic }}" width="240" height="240" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 240x240" preserveAspectRatio="xMidYMid slice" focusable="false" align="center">
         <h2>Bharat BioTech</h2>
         <p><h6>Dose and Frequency:</h6> 2 doses and 14 days apart</p>
         <p><h6>Vaccine Efficacy:</h6> 80.6% against PCR-confirmed symptomatic COVID-19 </p>
       </div><!-- /.col-lg-4 -->
 
       <div class="col-lg-4">
-        <img src="{{url_for('static', filename='vaccine.jpg')}}" width="240" height="240" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 240x240" preserveAspectRatio="xMidYMid slice" focusable="false" align="center">
+        <img src="{{ vaccine_pic }}" width="240" height="240" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 240x240" preserveAspectRatio="xMidYMid slice" focusable="false" align="center">
         <h2>Moderna</h2>
         <p><h6>Dose and Frequency:</h6> 2 doses and 28 days apart</p>
         <p><h6>Vaccine Efficacy:</h6> 94.1% against symptomatic COVID-19; 100% against severe COVID-19 </p>
@@ -99,14 +99,14 @@
   <!-- Last Two columns of text below the carousel -->
     <div class="row">
       <div class="col-lg-4">
-        <img src="{{url_for('static', filename='vaccine.jpg')}}" width="240" height="240" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 240x240" preserveAspectRatio="xMidYMid slice" focusable="false" align="center">
+        <img src="{{ vaccine_pic }}" width="240" height="240" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 240x240" preserveAspectRatio="xMidYMid slice" focusable="false" align="center">
         <h2>Novavax</h2>
         <p><h6>Dose and Frequency:</h6> 2 doses and 21 days apart</p>
         <p><h6>Vaccine Efficacy:</h6> Awaiting Official Phase III Interim Journal Publication </p>
 
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <img src="{{url_for('static', filename='vaccine.jpg')}}" width="240" height="240" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 240x240" preserveAspectRatio="xMidYMid slice" focusable="false" align="center">
+        <img src="{{ vaccine_pic }}" width="240" height="240" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 240x240" preserveAspectRatio="xMidYMid slice" focusable="false" align="center">
         <h2>Janssen</h2>
         <p><h6>Dose and Frequency:</h6> 1 dose </p>
         <p><h6>Vaccine Efficacy:</h6> 66.1-66.9% against confirmed moderate to severe/critical COVID-19 </p>
