--- a/templates/ScheduleAppointment.html
+++ b/templates/ScheduleAppointment.html
@@ -1,77 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
+  <script type="text/javascript">
+        var nearest = "{{lowestdistance|safe}}";
+        
+        var json_data = {{ json_data|tojson|safe }};
+
+        function clearvalues() {
+          $("#available_vaccines").empty();
+          $("#expected_date").empty();
+          $("#hospitaladdress").empty();
+
+          var current_hospital_name = nearest;
+          var hospital_data = JSON.parse(json_data);
+
+          var hospital_address = hospital_data[current_hospital_name][0];
+          var available_vaccines = hospital_data[current_hospital_name][1];
+          var expected_dates = hospital_data[current_hospital_name][2];
+
+          var address = document.getElementById('hospitaladdress');
+          address.value = hospital_data[current_hospital_name][0];
+
+          for (const vaccine of available_vaccines){
+            $("#available_vaccines").append($("<option/>", {
+              "value": vaccine,
+              "text": vaccine
+            }));
+          };
+
+          for (const date of expected_dates){
+            $("#expected_date").append($("<option/>", {
+              "value": date,
+              "text": date
+            }));
+          };
+          
+        }
+
+        window.onload = clearvalues;
+
+       function changeHospInfo(selectObject) {
+        $("#available_vaccines").empty();
+        $("#expected_date").empty();
+        $("#hospitaladdress").empty();
+
+        var current_hospital_name = selectObject.value;
+
+        var hospital_data = JSON.parse(json_data);
+
+        var hospital_address = hospital_data[current_hospital_name][0];
+        var available_vaccines = hospital_data[current_hospital_name][1];
+        var expected_dates = hospital_data[current_hospital_name][2];
+
+        var address = document.getElementById('hospitaladdress');
+        address.value = hospital_data[current_hospital_name][0];
+
+        for (const vaccine of available_vaccines){
+          $("#available_vaccines").append($("<option/>", {
+            "value": vaccine,
+            "text": vaccine
+          }));
+        };
+
+        for (const date of expected_dates){
+          $("#expected_date").append($("<option/>", {
+            "value": date,
+            "text": date
+          }));
+        };
+        }
+</script>
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
 {% extends "base.html" %}
 {% block title %}Schedule Appointment{% endblock %}
 {% block content %}
-<div class="form-row mt-3">
+<form method="POST" id="appointment-details">
+  {{ form.hidden_tag() }}
+  <div class="form-row mt-3">
     <div class="col form-group">
-    <div class="row">
-          <div class="col-sm-6">
-            <div class="card">
-                <header class="card-header">
-                    <h4 class="card-title mt-2">Hospital Locations</h4>
-                </header>
-                <form method="POST">
-                    {{ form.hidden_tag() }}
-                <article class="card-body">
-                    <iframe class="map", src="{{url_for('static', filename='map.html')}}" width="720" height="620"></iframe>
-                </article>
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="card">
+                    <header class="card-header">
+                        <h4 class="card-title mt-2">Hospital Locations</h4>
+                    </header>
+                    <article class="card-body">
+                        <iframe class="map", src="{{url_for('static', filename='map.html')}}" width="720" height="620"></iframe>
+                    </article>
+                </div>
             </div>
-          </div>
-          <div class="col-sm-6">
-
-            <div class="card">
-              <header class="card-header">
-                <h4 class="card-title mt-2">Hospital Locations</h4>
-              </header>
-
-              <article class="card-body">
-                <h4 class="card-title mt-2">Suggested Location: {{lowestdistance}} </h4>
-              </article>
-            </div>
-
-            <div class="card my-3 py-2">
-                <header class="card-header">
-                    <h4 class="card-title mt-2">Hospital Information</h4>
-                </header>
-                <article class="card-body">
-                    <h6 class="card-text">Hospital Name:</h6>
-                    {{ form.hospitalname(class="form-control", id ="hospitalname") }}
-                    <script>
-                        $("#hospitalname").prop("readonly", true);
-                    </script>
-                    <br>
-                <h6 class="card-text">Hospital Address:</h6>
-                    {{ form.hospitaladdress(class="form-control readonly", id="hospitaladdress") }}
-                    <script>
-                        $("#hospitaladdress").prop("readonly", true);
-                    </script>
-                    <br>
-                <h6 class="card-text">Available Vaccines: </h6>
-                  <div class="form-group">
-                    {{ form.availablevaccines(class="form-select", placeholder="Available Vaccines", id="available_vaccines") }}
-                  </div>
-                    <br>
-                  <h6 class="card-text">Expected Date of Vaccination:</h6>
-                  <div class="form-group">
-                   <div class="form-group">
-                      {{ form.vaccineschedule(class="form-select", placeholder="Expected Date of Vaccination", id="expected_date") }}
-                  </div>
-                    <br>
-                    <div class="d-grid gap-2">
-                            {{ form.schedule(class="btn btn-primary btn-block") }}
-                    </div>
-                          </div>
-                        </div>
+  
+            <div class="col-sm-6">
+                <div class="card">
+                    <header class="card-header">
+                      <h4 class="card-title mt-2">Hospital Locations</h4>
+                    </header>
+              
+                    <article class="card-body">
+                      <h4 class="card-title mt-2">Suggested Location: {{lowestdistance}} </h4>
+                    </article>
+                </div>
+                
+                <div class="card my-3 py-2">
+                  <header class="card-header">
+                      <h4 class="card-title mt-2">Hospital Information</h4>
+                  </header>
+    
+                  <article class="card-body">
+                      <h6 class="card-text">Hospital Name:</h6>
+    
+                      <div class="form-group">
+                        {{ form.hospitalname(class="form-select", placeholder="Hospital Name", id ="hospitalname", onchange="changeHospInfo(this)") }}
                       </div>
-
-                    </div>
-                  </div>
-                </article>
+    
+                      <h6 class="card-text">Hospital Address:</h6>
+                      <div class="form-group">
+                        {{ form.hospitaladdress(class="form-control readonly", id="hospitaladdress") }}
+                      </div>
+                      <script>
+                          $("#hospitaladdress").prop("readonly", true);
+                      </script>
+                      <br>
+    
+                      <h6 class="card-text">Available Vaccines: </h6>
+                      <div class="form-group">
+                        {{ form.availablevaccines(class="form-select", placeholder="Available Vaccines", id="available_vaccines") }}
+                      </div>
+    
+                      <h6 class="card-text">Expected Date of Vaccination:</h6>
+                      <div class="form-group">
+                        {{ form.vaccineschedule(class="form-select", placeholder="Expected Date of Vaccination", id="expected_date") }}
+                      </div>
+    
+                      <div class="d-grid gap-2 my-2">
+                        {{ form.schedule(class="btn btn-primary btn-block") }}
+                      </div>
+                  </article>
+                </div>
             </div>
-          </div>
-  </form>
+
+            
+        </div>
     </div>
-    </div>
+  </div>
+</form>
 {% endblock %}
