--- a/templates/ViewAppointment.html
+++ b/templates/ViewAppointment.html
@@ -12,30 +12,30 @@
                             <div class="row">
                                   <div class="col">
                                     <h6 class="card-text">First Name:</h6>
-                                     <input type="text" class="form-control" placeholder="First Name" aria-label="fname" readonly value ="{{view.first_name}}"></li>
+                                     <input type="text" class="form-control" placeholder="First Name" aria-label="fname" readonly value ="{{view.user_information.first_name}}"></li>
                                   </div>
                                   <div class="col">
                                     <h6 class="card-text">Middle Name:</h6>
-                                     <input type="text" class="form-control" placeholder="Middle Name" aria-label="mname" readonly value ="{{view.middle_name}}"></li>
+                                     <input type="text" class="form-control" placeholder="Middle Name" aria-label="mname" readonly value ="{{view.user_information.middle_name}}"></li>
                                   </div>
                                 <div class="col">
                                     <h6 class="card-text">Last Name:</h6>
-                                     <input type="text" class="form-control" placeholder="Last Name" aria-label="lname" readonly value ="{{view.last_name}}"></li>
+                                     <input type="text" class="form-control" placeholder="Last Name" aria-label="lname" readonly value ="{{view.user_information.last_name}}"></li>
                                   </div>
                             </div>
                         </div>
                          <br>
                          <h6 class="card-text">Registration Number:</h6>
-                         <input type="text" class="form-control" placeholder="Registration Number" aria-label="registrationnumber" readonly value ={{view.id}}></li>
+                         <input type="text" class="form-control" placeholder="Registration Number" aria-label="registrationnumber" readonly value ={{view.availability_details.id}}></li>
                          <br>
                          <h6 class="card-text">Vaccine Name:</h6>
-                            <input type="text" class="form-control" placeholder="Vaccine Name" aria-label="vaccinename" readonly value="{{view.vaccine_name}}"></li>
+                            <input type="text" class="form-control" placeholder="Vaccine Name" aria-label="vaccinename" readonly value="{{view.vaccine.vaccine_name}}"></li>
                         <br>
                          <h6 class="card-text">Vaccination Site:</h6>
-                             <input type="text" class="form-control" placeholder="Vaccination Site" aria-label="cvaccinesite" readonly value="{{view.hosp_name}}"></li>
+                             <input type="text" class="form-control" placeholder="Vaccination Site" aria-label="cvaccinesite" readonly value="{{view.hospital.hosp_name}}"></li>
                           <br>
                          <h6 class="card-text">Vaccination Schedule:</h6>
-                             <input type="text" class="form-control" placeholder="Vaccination Date" aria-label="vaccinesched" readonly value={{view.availability_date}}></li>
+                             <input type="text" class="form-control" placeholder="Vaccination Date" aria-label="vaccinesched" readonly value={{view.availability_details.availability_date}}></li>
                     </article>
                 </div>
             </div>
