--- a/templates/admin_index.html
+++ b/templates/admin_index.html
@@ -33,6 +33,7 @@ Update Vaccine Information
                                 </tr>
                             {% endfor %}
                             <a href="{{ url_for('addvaccine') }}" class="btn btn-info" role="button">Add Vaccine</a>
+                            <a href="{{ url_for('.download_report') }}">Generate Excel Report</a>
                         </tbody>
                     </table>
                 </article>
