--- a/templates/base.html
+++ b/templates/base.html
@@ -39,6 +39,9 @@
           <li class="nav-item active">
             <a class="nav-link" href="{{ url_for('Home') }}">Home</a>  
           </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="{{ url_for('FAQs') }}">FAQs</a>
+            </li>
         </ul>
         {%if current_user.is_authenticated %}
         <ul class="navbar-nav mr-auto">
